Bug 305765 - Certain websites will ask to store log-in information every time, even if the information is already stored and filled in by KWallet
Summary: Certain websites will ask to store log-in information every time, even if the...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: 4.9
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-25 15:57 UTC by Marcus Harrison
Modified: 2012-09-09 14:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcus Harrison 2012-08-25 15:57:42 UTC
Certain websites (such as twitter.com) will successfully save log-in form information in KWallet and successfully load it up when coming to the log-in screen, but will ask every single time after you log-in if you want to save the password in KWallet.

I have confirmed this is not the case using KHTML.

Reproducible: Always
Comment 1 Dawit Alemayehu 2012-08-25 19:06:57 UTC
What version of KDE release are you using ?
Comment 2 Marcus Harrison 2012-08-25 19:12:31 UTC
KDE 4.9.0.
Comment 3 Dawit Alemayehu 2012-09-01 16:07:34 UTC
Please provide an example website where this is happening.
Comment 4 Marcus Harrison 2012-09-01 18:14:49 UTC
Twitter's login page exhibits the behaviour.
Comment 5 Dawit Alemayehu 2012-09-07 21:28:54 UTC
Well I cannot reproduce this issue. Are you in a position try out the latest version of kwebkitpart, v1.3.0 and see if you can reproduce the issue with it as well ?
Comment 6 Marcus Harrison 2012-09-08 11:31:39 UTC
I am currently using 1.3 and can confirm this behaviour.
Comment 7 Dawit Alemayehu 2012-09-08 15:32:46 UTC
Actually I can reproduce this now as well. Hmm... I will look into it when I get the chance.
Comment 8 Dawit Alemayehu 2012-09-09 14:23:39 UTC
Git commit fe8252546035c4f7dc180bcc11419fa88057071d by Dawit Alemayehu.
Committed on 09/09/2012 at 09:06.
Pushed by adawit into branch 'KDE/4.9'.

Do not prompt the user when a website login credential is unchanged and had
previously been saved in persistent storage.
FIXED-IN: 4.9.2

M  +5    -3    kdewebkit/kwebwallet.cpp

http://commits.kde.org/kdelibs/fe8252546035c4f7dc180bcc11419fa88057071d