Do not prompt the user when a website login credential is unchanged and had previously been saved in persistent storage.

BUG: 305765
FIXED-IN: 4.9.2